--- a/rapicfg.html
+++ b/rapicfg.html
@@ -2,7 +2,7 @@
     "basic": {
         "config": {
             "title": "",
-            "navTitle": "51RP Manual API",
+            "navTitle": "Manual API",
             "history": {
                 "max": -1,
                 "pageSize": 2
@@ -13,7 +13,7 @@
             },
             "apiParamNameInRequest": "cmd",
             "searchPageSize": 30,
-            "dcs": "http://192.168.2.151:8080/docs/api/",
+            "dcs": "http://jronrun.github.io/",
             "note": {
                 "theme": "default",
                 "language": "APL",
