--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <![endif]-->
 
         <script>
-            window.location.href = 'http://jronrun.github.io/api.html';
+            window.location.href = 'http://jronrun.github.io/manual/api.html';
         </script>
     </body>
 </html>
