--- a/manual/rapicfg.html
+++ b/manual/rapicfg.html
@@ -13,7 +13,7 @@
             },
             "apiParamNameInRequest": "cmd",
             "searchPageSize": 30,
-            "dcs": "http://jronrun.github.io/",
+            "dcs": "http://jronrun.github.io/manual/",
             "note": {
                 "theme": "default",
                 "language": "APL",
